experiments and corrections

--- a/BaselineExperiments/Baseline_Experiment_Type_2-SVM.ipynb
+++ b/BaselineExperiments/Baseline_Experiment_Type_2-SVM.ipynb
@@ -26,12 +26,13 @@
     "from sklearn import model_selection, preprocessing, metrics, svm\n",
     "from sklearn.svm import LinearSVC, SVC\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "import json\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-22T12:52:36.666393Z",
@@ -50,7 +51,7 @@
    ],
    "source": [
     "data = []\n",
-    "with gzip.open('reviews_Movies_and_TV_5.json.gz') as f: \n",
+    "with gzip.open('../Data/reviews_Movies_and_TV_5.json.gz') as f:\n",
     "    for l in f: \n",
     "        data.append(json.loads(l.strip()))\n",
     "        \n",
