--- a/Scraping/Test.ipynb
+++ b/Scraping/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
@@ -11,8 +11,20 @@
     "import logging\n",
     "import json\n",
     "import string\n",
-    "import random\n",
-    "\n",
+    "import random"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "# Input/ Output\n",
     "db_path = '../Data/test.db'\n",
     "db_name = 'test'\n",
@@ -31,7 +43,7 @@
     "logger.addHandler(fhandler)\n",
     "logger.setLevel(logging.DEBUG)\n",
     "\n",
-    "host = \"https://www.cnet.com/\"\n",
+    "# host = \"https://www.cnet.com/\"\n",
     "review_cnt = 0\n",
     "already_cnt = 0\n",
     "no_annotation = 0\n",
@@ -87,7 +99,7 @@
     "no_rating = 0\n",
     "no_text = 0\n",
     "extracted_cnt = 0\n",
-    "# no_anno, ok, ok\n",
+    "\n",
     "my_list =['https://www.cnet.com/reviews/lg-exalt-lte-preview/',\n",
     "       'https://www.cnet.com/reviews/samsung-galaxy-s20-plus-5g-review/',\n",
     "       'https://www.cnet.com/reviews/iphone-11-2019-battery-deep-fusion-review/',\n",
@@ -95,47 +107,7 @@
     "for review_link in my_list:\n",
     "    review_cnt += 1\n",
     "    response = get(review_link)\n",
-    "    soup = BeautifulSoup(response.text, 'lxml')\n",
-    "    try:\n",
-    "        data = json.loads(\"\".join(soup.find(\"script\", {\"type\": \"application/ld+json\"}).contents),strict=False)\n",
-    "        try:\n",
-    "            review = data['review']\n",
-    "            try:\n",
-    "                reviewBody = review['reviewBody']\n",
-    "            except KeyError:\n",
-    "                no_text += 1\n",
-    "                continue\n",
-    "        except KeyError:\n",
-    "            no_annotation += 1\n",
-    "            continue\n",
-    "        node = generateNode(31)\n",
-    "        url = review_link\n",
-    "        try:\n",
-    "            ratingValue = str(review['reviewRating']['ratingValue'])\n",
-    "            bestRating = review['reviewRating']['bestRating']\n",
-    "            worstRating = review['reviewRating']['worstRating']\n",
-    "            reviewRating = \"already included\"\n",
-    "            print('node:' + node)\n",
-    "            print('url: '+ review_link)\n",
-    "            print('reviewBody: ' + reviewBody)\n",
-    "            print('worstRating: ' + worstRating)\n",
-    "            print('bestRating: ' + bestRating)\n",
-    "            print('ratingValue: ' + ratingValue)\n",
-    "            c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node, url, reviewBody, str(reviewRating), ratingValue, bestRating, worstRating))\n",
-    "            conn.commit()\n",
-    "            extracted_cnt += 1\n",
-    "        except KeyError:\n",
-    "            no_rating += 1\n",
-    "            continue\n",
-    "    except AttributeError:\n",
-    "        no_annotation += 1\n",
-    "        continue\n",
-    "\n",
-    "print(f\"Done {host} - Reviews extracted: \" + str(extracted_cnt) + \" out of \" + str(review_cnt))\n",
-    "print(\"Already in: \" + str(already_cnt))\n",
-    "print(\"No Annotations: \" + str(no_annotation))\n",
-    "print(\"No Rating : \" + str(no_rating))\n",
-    "print(\"No ReviewBody: \" + str(no_text))"
+    "    soup = BeautifulSoup(response.text, 'lxml')"
    ],
    "metadata": {
     "collapsed": false,
@@ -146,109 +118,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [],
-   "source": [
-    "links = []\n",
-    "for page in range(1, 23):\n",
-    "    url = f'https://www.proporta.com/devices?p={page}/'\n",
-    "    response = get(url, headers={'User-Agent': 'Custom'})\n",
-    "    soup = BeautifulSoup(response.text, 'lxml')\n",
-    "    lefts = soup.find_all('li', class_='item first')\n",
-    "    for left in lefts:\n",
-    "        links.append(left.a['href'] + '#allReviews')\n",
-    "    rights = soup.find_all('li', class_='item last')\n",
-    "    for right in rights:\n",
-    "        links.append(right.a['href'] + '#allReviews')\n",
-    "for page in range(1, 5):\n",
-    "    url = f'https://www.proporta.com/accessories?p={page}/'\n",
-    "    response = get(url, headers={'User-Agent': 'Custom'})\n",
-    "    soup = BeautifulSoup(response.text, 'lxml')\n",
-    "    lefts = soup.find_all('li', class_='item first')\n",
-    "    for left in lefts:\n",
-    "        links.append(left.a['href'] + '#allReviews')\n",
-    "    rights = soup.find_all('li', class_='item last')\n",
-    "    for right in rights:\n",
-    "        links.append(right.a['href'] + '#allReviews')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node:_:znodePtz2UpHweO6C2XRnHJslWFOEFMPlFtD\n",
-      "url: https://www.proporta.com/ted-baker-cheryia-mirror-folio-case-with-outer-card-slot-for-iphone-8-7-6-hedgerow#allReviews\n",
-      "reviewBody: I use this case for my Iphone 6. I really like the mirror and card slot (had one with a mirror from Ted *** before, but that one didn't have the card holder). Quality is okay.                 \n",
-      "worstRating: 1\n",
-      "bestRating: 5\n",
-      "ratingValue: 5\n",
-      "node:_:znodePtz2UpHweO6C2XRnHJslWFOEFMPlFtD\n",
-      "url: https://www.proporta.com/ted-baker-cheryia-mirror-folio-case-with-outer-card-slot-for-iphone-8-7-6-hedgerow#allReviews\n",
-      "reviewBody: Have had different versions of this case, but this is the only one that doesn't have a magnetic closure, no bother still gorgeous                 \n",
-      "worstRating: 1\n",
-      "bestRating: 5\n",
-      "ratingValue: 4\n",
-      "node:_:znodePtz2UpHweO6C2XRnHJslWFOEFMPlFtD\n",
-      "url: https://www.proporta.com/ted-baker-cheryia-mirror-folio-case-with-outer-card-slot-for-iphone-8-7-6-hedgerow#allReviews\n",
-      "reviewBody: Nice looking case bought as a present so all I can tell you is that the recipient is happy                 \n",
-      "worstRating: 1\n",
-      "bestRating: 5\n",
-      "ratingValue: 5\n",
-      "node:_:znodePtz2UpHweO6C2XRnHJslWFOEFMPlFtD\n",
-      "url: https://www.proporta.com/ted-baker-cheryia-mirror-folio-case-with-outer-card-slot-for-iphone-8-7-6-hedgerow#allReviews\n",
-      "reviewBody: It is always on my I phone and used every day. I have showed my friends and they love it and i have given them your web site details.                 \n",
-      "worstRating: 1\n",
-      "bestRating: 5\n",
-      "ratingValue: 5\n",
-      "node:_:znodePtz2UpHweO6C2XRnHJslWFOEFMPlFtD\n",
-      "url: https://www.proporta.com/ted-baker-cheryia-mirror-folio-case-with-outer-card-slot-for-iphone-8-7-6-hedgerow#allReviews\n",
-      "reviewBody: Excellent product at good price                 \n",
-      "worstRating: 1\n",
-      "bestRating: 5\n",
-      "ratingValue: 5\n"
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=1/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=2/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=3/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=4/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=5/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=6/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=7/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=8/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=9/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=10/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=11/\n",
+      "https://www.techadvisor.co.uk/review/wearable-tech/?p=12/\n"
      ]
     }
    ],
    "source": [
-    "my_list = ['https://www.proporta.com/ted-baker-cheryia-mirror-folio-case-with-outer-card-slot-for-iphone-8-7-6-hedgerow#allReviews']\n",
-    "\n",
-    "for review_link in my_list:\n",
-    "    review_cnt += 1\n",
-    "    response = get(review_link, headers={'User-Agent': 'Custom'})\n",
-    "    soup = BeautifulSoup(response.text, 'lxml')\n",
-    "    reviews = soup.find('ol', id='reviewContainer')\n",
-    "    if reviews is None:\n",
-    "        no_annotation += 1\n",
-    "        continue\n",
-    "    else:\n",
-    "        for review in reviews.find_all('li', itemtype='http://schema.org/Review'):\n",
-    "            reviewBody = review.find('p', itemprop='reviewBody').text.split('\\r\\n')[0]\n",
-    "            ratingValue = review.find('span', itemprop='ratingValue').text\n",
-    "            bestRating = review.find('span', itemprop='bestRating').text\n",
-    "            worstRating = review.find('meta', itemprop='worstRating')['content']\n",
-    "            reviewRating = review.find('div', itemprop='reviewRating').text\n",
-    "\n",
-    "            print('node:' + node)\n",
-    "            print('url: '+ review_link)\n",
-    "            print('reviewBody: ' + reviewBody)\n",
-    "            print('worstRating: ' + worstRating)\n",
-    "            print('bestRating: ' + bestRating)\n",
-    "            print('ratingValue: ' + ratingValue)\n",
-    "\n",
-    "\n",
-    "            # c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node, review_link, reviewBody, reviewRating, ratingValue, bestRating, worstRating))\n",
-    "            # conn.commit()\n",
-    "            # extracted_cnt += 1"
+    "links = []\n",
+    "for page in range(1, 13):\n",
+    "    url = f'https://www.techadvisor.co.uk/review/wearable-tech/?p={page}/'\n",
+    "    print(url)\n",
+    "    # soup = BeautifulSoup(get(url).text, 'lxml')\n",
+    "    # reviews = soup.find_all('li', class_='media')\n",
+    "    # for review in reviews:for review in reviews:\n",
+    "    #     links.append(review.a['href'])\n",
+    "# for page in range(1, 69):\n",
+    "#     url = f'https://www.techadvisor.co.uk/review/smartphones/?p={page}/'\n",
+    "#     soup = BeautifulSoup(get(url).text, 'lxml')\n",
+    "#     reviews = soup.find_all('li', class_='media')\n",
+    "#     for review in reviews:\n",
+    "#         links.append(review.a['href'])"
    ],
    "metadata": {
     "collapsed": false,
@@ -259,19 +164,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "links = list(dict.fromkeys(links))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "outputs": [
     {
-     "data": {
-      "text/plain": "[<span itemprop=\"author\" itemscope=\"\" itemtype=\"http://schema.org/Person\">Review by <span itemprop=\"name\">Natasha V</span></span>,\n <span itemprop=\"name\">Natasha V</span>,\n <span itemprop=\"ratingValue\">5</span>,\n <span itemprop=\"bestRating\">5</span>,\n <span itemprop=\"author\" itemscope=\"\" itemtype=\"http://schema.org/Person\">Review by <span itemprop=\"name\">Rihana Z</span></span>,\n <span itemprop=\"name\">Rihana Z</span>,\n <span itemprop=\"ratingValue\">4</span>,\n <span itemprop=\"bestRating\">5</span>,\n <span itemprop=\"author\" itemscope=\"\" itemtype=\"http://schema.org/Person\">Review by <span itemprop=\"name\">Gary M</span></span>,\n <span itemprop=\"name\">Gary M</span>,\n <span itemprop=\"ratingValue\">5</span>,\n <span itemprop=\"bestRating\">5</span>,\n <span itemprop=\"author\" itemscope=\"\" itemtype=\"http://schema.org/Person\">Review by <span itemprop=\"name\">Brenda S</span></span>,\n <span itemprop=\"name\">Brenda S</span>,\n <span itemprop=\"ratingValue\">5</span>,\n <span itemprop=\"bestRating\">5</span>,\n <span itemprop=\"author\" itemscope=\"\" itemtype=\"http://schema.org/Person\">Review by <span itemprop=\"name\">Sonya B</span></span>,\n <span itemprop=\"name\">Sonya B</span>,\n <span itemprop=\"ratingValue\">5</span>,\n <span itemprop=\"bestRating\">5</span>]"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.techadvisor.co.uk/review/fitbit-charge-4-3786052/\n",
+      "https://www.techadvisor.co.uk/review/moto-360-3776998/\n",
+      "https://www.techadvisor.co.uk/review/mobvoi-ticwatch-pro-2020-3784700/\n",
+      "https://www.techadvisor.co.uk/review/huawei-watch-gt-2-42mm-3783214/\n",
+      "https://www.techadvisor.co.uk/review/honor-band-5-sport-3781814/\n",
+      "https://www.techadvisor.co.uk/review/honor-magic-watch-2-3781755/\n",
+      "https://www.techadvisor.co.uk/review/puma-smartwatch-3702077/\n",
+      "https://www.techadvisor.co.uk/review/kokoon-sleep-tracking-headphones-3781082/\n",
+      "https://www.techadvisor.co.uk/review/huawei-band-4-3780250/\n",
+      "https://www.techadvisor.co.uk/review/mobvoi-ticwatch-pro-4g-3779880/\n",
+      "https://www.techadvisor.co.uk/review/fitbit-aria-air-3778980/\n",
+      "https://www.techadvisor.co.uk/review/samsung-galaxy-fit-3778915/\n",
+      "https://www.techadvisor.co.uk/review/withings-body-cardio-3675094/\n",
+      "https://www.techadvisor.co.uk/review/xiaomi-mi-band-4-3699053/\n",
+      "https://www.techadvisor.co.uk/review/amazfit-bip-lite-3778124/\n",
+      "https://www.techadvisor.co.uk/review/michael-kors-access-mkgo-3777601/\n",
+      "https://www.techadvisor.co.uk/review/amazfit-gtr-3701828/\n",
+      "https://www.techadvisor.co.uk/review/samsung-galaxy-watch-active-2-3777590/\n",
+      "https://www.techadvisor.co.uk/review/polar-ignite-3776368/\n",
+      "https://www.techadvisor.co.uk/review/withings-move-ecg-3690380/\n"
+     ]
     }
    ],
    "source": [
-    "reviews.find_all('span')\n"
+    "url = 'https://www.techadvisor.co.uk/review/wearable-tech/?p=10/'\n",
+    "soup = BeautifulSoup(get(url).text, 'lxml')\n",
+    "reviews = soup.find_all('li', class_='media')\n",
+    "for review in reviews:\n",
+    "    print(review.a['href'])\n"
    ],
    "metadata": {
     "collapsed": false,
