--- a/Scraping/movieTV_xtemplates.ipynb
+++ b/Scraping/movieTV_xtemplates.ipynb
@@ -357,18 +357,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n"
+      "<!DOCTYPE html>\n",
+      "<html class=\"no-js\" lang=\"en\">\n",
+      "<head>\n",
+      "<meta charset=\"utf-8\"/>\n",
+      "<meta content=\"ie=edge\" http-equiv=\"x-ua-compatible\"/>\n",
+      "<meta content=\"width=device-width, initial-scale=1.0\" name=\"viewport\"/>\n",
+      "<meta content=\"text/html\" http-equiv=\"content-type\"/>\n",
+      "<meta content=\" best buy international, best buy countries\" name=\"keywords\"/>\n",
+      "<meta content=\"Shop online at Best Buy in your country and language of choice. Best Buy provides online shopping in a number of countries and languages.\" name=\"description\"/>\n",
+      "<link href=\"https://www.bestbuy.com/~assets/bby/_com/header-footer/images/favicon-32.png\" rel=\"icon\" sizes=\"32x32\"/>\n",
+      "<title>Best Buy International: Select your Country - Best Buy</title>\n",
+      "<link href=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/css/app.css\" rel=\"stylesheet\"/>\n",
+      "</head>\n",
+      "<body>\n",
+      "<div class=\"language-menu\">\n",
+      "<ul class=\"container\">\n",
+      "<li>\n",
+      "<button lang=\"en\">English</button>\n",
+      "</li>\n",
+      "<li>\n",
+      "<button lang=\"fr\">FranÃ§ais</button>\n",
+      "</li>\n",
+      "<li>\n",
+      "<button lang=\"es\">EspaÃ±ol</button>\n",
+      "</li>\n",
+      "</ul>\n",
+      "</div>\n",
+      "<div class=\"page-container\">\n",
+      "<div class=\"background-container\">\n",
+      "<div class=\"container\">\n",
+      "<div class=\"content\">\n",
+      "<div lang=\"en\">\n",
+      "<img alt=\"Best Buy Logo\" class=\"logo\" src=\"https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png\" width=\"80\"/>\n",
+      "<div class=\"heading\">Hello!</div>\n",
+      "<h1>Choose a country.</h1>\n",
+      "<div class=\"country-selection\">\n",
+      "<a href=\"https://www.bestbuy.ca/en-CA/home.aspx\">\n",
+      "<img alt=\"Canada\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/canada.svg\"/>\n",
+      "<h4>Canada</h4>\n",
+      "</a>\n",
+      "<a class=\"us-link\" href=\"#\">\n",
+      "<img alt=\"United States\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/usa.svg\"/>\n",
+      "<h4>United States</h4>\n",
+      "</a>\n",
+      "<a href=\"https://www.bestbuy.com.mx/\">\n",
+      "<img alt=\"Mexico\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/mexico.svg\"/>\n",
+      "<h4>Mexico</h4>\n",
+      "</a>\n",
+      "</div>\n",
+      "<div class=\"horizontal-rule\"></div>\n",
+      "<h3 class=\"international-header\">Shopping in the U.S.?</h3>\n",
+      "<p class=\"info\">\n",
+      "              International customers can shop on www.bestbuy.com and have orders shipped to any U.S. address or U.S. store. \n",
+      "              <a class=\"more-details\" href=\"https://www.bestbuy.com/site/help-topics/international-orders/pcmcat204400050019.c?id=pcmcat204400050019&amp;intl=nosplash\">See More Details\n",
+      "                <img src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/icons/arrow.svg\"/>\n",
+      "</a>\n",
+      "</p>\n",
+      "</div>\n",
+      "<div class=\"hidden\" lang=\"fr\">\n",
+      "<img alt=\"Best Buy Logo\" class=\"logo\" src=\"https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png\" width=\"80\"/>\n",
+      "<div class=\"heading\">Bonjour!</div>\n",
+      "<h1>Choisir un pays :</h1>\n",
+      "<div class=\"country-selection\">\n",
+      "<a href=\"https://www.bestbuy.ca/fr-CA/home.aspx\">\n",
+      "<img alt=\"Canada\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/canada.svg\"/>\n",
+      "<h4>Canada</h4>\n",
+      "</a>\n",
+      "<a class=\"us-link\" href=\"#\">\n",
+      "<img alt=\"United States\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/usa.svg\"/>\n",
+      "<h4>United States</h4>\n",
+      "</a>\n",
+      "<a href=\"https://www.bestbuy.com.mx/\">\n",
+      "<img alt=\"Mexico\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/mexico.svg\"/>\n",
+      "<h4>Mexico</h4>\n",
+      "</a>\n",
+      "</div>\n",
+      "<div class=\"horizontal-rule\"></div>\n",
+      "<h3 class=\"international-header\">Vous magasinez aux Ã.-U.?</h3>\n",
+      "<p class=\"info\">\n",
+      "              Les clients internationaux peuvent magasiner au www.bestbuy.com et faire livrer leurs commandes Ã  nâimporte quelle adresse ou nâimporte quel magasin aux Ãtats-Unis. \n",
+      "              <a class=\"more-details\" href=\"https://www.bestbuy.com/site/help-topics/international-orders/pcmcat204400050019.c?id=pcmcat204400050019&amp;intl=nosplash\">Voir les dÃ©tails\n",
+      "                <img src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/icons/arrow.svg\"/>\n",
+      "</a>\n",
+      "</p>\n",
+      "</div>\n",
+      "<div class=\"hidden\" lang=\"es\">\n",
+      "<img alt=\"Best Buy Logo\" class=\"logo\" src=\"https://www.bestbuy.com/~assets/bby/_com/header-footer/images/bby_logo-a7e90594729ed2e119331378def6c97e.png\" width=\"80\"/>\n",
+      "<div class=\"heading\">Â¡Hola!</div>\n",
+      "<h1>Seleciona un paÃ­s.</h1>\n",
+      "<div class=\"country-selection\">\n",
+      "<a href=\"https://www.bestbuy.ca/en-CA/home.aspx\">\n",
+      "<img alt=\"Canada\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/canada.svg\"/>\n",
+      "<h4>Canada</h4>\n",
+      "</a>\n",
+      "<a class=\"us-link\" href=\"#\">\n",
+      "<img alt=\"Estados Unidos\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/usa.svg\"/>\n",
+      "<h4>Estados Unidos</h4>\n",
+      "</a>\n",
+      "<a href=\"https://www.bestbuy.com.mx/\">\n",
+      "<img alt=\"Mexico\" src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/maps/mexico.svg\"/>\n",
+      "<h4>MÃ©xico</h4>\n",
+      "</a>\n",
+      "</div>\n",
+      "<div class=\"horizontal-rule\"></div>\n",
+      "<h3 class=\"international-header\">Â¿COMPRANDO EN EE. UU.?</h3>\n",
+      "<p class=\"info\">\n",
+      "              Clientes internacionales pueden comparer en www.bestbuy.com y enviar sus pedidos a cualquier domicilio o tienda en EE. UU. \n",
+      "              <a class=\"more-details\" href=\"https://www.bestbuy.com/site/help-topics/international-orders/pcmcat204400050019.c?id=pcmcat204400050019&amp;intl=nosplash\">Ver mÃ¡s detalles\n",
+      "                <img src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/images/icons/arrow.svg\"/>\n",
+      "</a>\n",
+      "</p>\n",
+      "</div>\n",
+      "</div>\n",
+      "</div>\n",
+      "</div>\n",
+      "</div>\n",
+      "<script src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/js/zepto.min.js\"></script>\n",
+      "<script src=\"https://www.bestbuy.com/~assets/bby/_intl/landing_page/js/app.js\"></script>\n",
+      "<script type=\"text/javascript\">\n",
+      "    window.track = { pageType:'International', templateName:'International', page:'International Page', section:'International' };\n",
+      "    window.dioFramework = true;\n",
+      "  </script>\n",
+      "<script src=\"https://www.bestbuy.com/~assets/bby/_com/sc-libraries/javascript/libraries-d3479d7f4631b94864264fdd7bdf91f3.js\"></script>\n",
+      "<script async=\"\" src=\"https://www.bestbuy.com/~assets/bby/_com/analytics-dotcom/analyticsInit.js\"></script>\n",
+      "<script type=\"text/javascript\">var _cf = _cf || []; _cf.push(['_setFsp', true]);  _cf.push(['_setBm', true]);  _cf.push(['_setAu', '/resources/eaf6bc5d96rn216415bbddb9ddaa7aed']); </script><script src=\"/resources/eaf6bc5d96rn216415bbddb9ddaa7aed\" type=\"text/javascript\"></script></body>\n",
+      "</html>\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "list = []\n"
+    "list = []\n",
+    "# Cell Phones with plans\n",
+    "# https://www.bestbuy.com/site/mobile-cell-phones/mobile-phones-with-plans/pcmcat209400050001.c?id=pcmcat209400050001\n",
+    "\n",
+    "headers = {\n",
+    "    'authority': 'www.bestbuy.ca',\n",
+    "    'pragma': 'no-cache',\n",
+    "    'cache-controlÄ': 'no-cache',\n",
+    "    'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36/KHTML, like Gecko) Chrome/85.0.4159.2 Safari/537.36',\n",
+    "    'accept': '*/*',\n",
+    "    'sec-fetch-site': 'same-origin',\n",
+    "    'sec-fetch-mode': 'cors',\n",
+    "    'sec-fetch-dest': 'empty',\n",
+    "    'referer': 'https://www.bestbuy.ca/en-ca/product/logitech-c920s-pro-1080p-hd-webcam/13444247',\n",
+    "    'accept-language': 'en-US,en;q=0.9'\n",
+    "}\n",
+    "\n",
+    "# url = 'https://www.bestbuy.com/site/mobile-cell-phones/mobile-phones-with-plans/pcmcat209400050001.c?id=pcmcat209400050001'\n",
+    "soup = BeautifulSoup(get(url, headers={'User-Agent': 'Custom'}).text, 'lxml')\n",
+    "# print(soup.find_all('li', class_='sku-item'))\n",
+    "# for prod in\n",
+    "print(soup)"
    ],
    "metadata": {
     "collapsed": false,
