--- a/BaselineExperiments/Baseline_Experiment_Type_1-NaiveBayes.ipynb
+++ b/BaselineExperiments/Baseline_Experiment_Type_1-NaiveBayes.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T08:25:36.695261Z",
@@ -80,7 +80,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "import json\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T09:05:46.612989Z",
@@ -150,7 +152,7 @@
    ],
    "source": [
     "data = []\n",
-    "with gzip.open('reviews_Movies_and_TV_5.json.gz') as f: \n",
+    "with gzip.open('reviews_Movies_and_TV_5.json.gz') as f:\n",
     "    for l in f: \n",
     "        data.append(json.loads(l.strip()))\n",
     "\n",
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T09:03:02.883397Z",
@@ -175,7 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "194439\n"
+      "1697533\n"
      ]
     }
    ],
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T08:25:17.102224Z",
@@ -338,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "194439\n"
+      "1697533\n"
      ]
     }
    ],
@@ -357,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T08:25:44.012257Z",
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-17T14:05:52.892278Z",
@@ -387,11 +389,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([0, 1, 2, 3, 4])"
-      ]
+      "text/plain": "array([0, 1, 2, 3, 4], dtype=int64)"
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T08:27:17.992516Z",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T08:27:33.390388Z",
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T08:27:41.379401Z",
@@ -488,11 +488,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
-      ]
+      "text/plain": "MultinomialNB()"
      },
-     "execution_count": 67,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,40 +509,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-18T08:27:49.014283Z",
-     "start_time": "2020-05-18T08:27:48.966909Z"
-    }
-   },
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "#Predict the response for test dataset\n",
     "y_pred = nb.predict(xtest_tfidf)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-18T08:28:46.915782Z",
-     "start_time": "2020-05-18T08:28:46.867316Z"
-    }
-   },
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5594527874922856\n",
-      "Precision: 0.29114904143475573\n",
-      "F1: 0.1453772850881709\n"
+      "[[    48      2     22     87  30730]\n",
+      " [     9      0     30    207  30506]\n",
+      " [     1      0     61    450  59907]\n",
+      " [     7      2     53    550 114441]\n",
+      " [    33     15     67    450 271582]]\n",
+      "Accuracy: 0.5345815496995641\n",
+      "Precision: 0.32049096647049036\n",
+      "F1: 0.14230111562625974\n"
      ]
     }
    ],
    "source": [
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "\n",
     "# Model Accuracy, how often is the classifier correct?\n",
     "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n",
     "print(\"Precision:\", metrics.precision_score(y_test, y_pred, average=\"macro\"))\n",
@@ -552,11 +551,114 @@
     "\n",
     "# with CountVectorizer -> accuracy:  0.5956407336134784\n",
     "# with TFIDF Vectorizer -> Accuracy: 0.5594527874922856"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[    48      2     22     87  30730]\n",
+      " [     9      0     30    207  30506]\n",
+      " [     1      0     61    450  59907]\n",
+      " [     7      2     53    550 114441]\n",
+      " [    33     15     67    450 271582]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_confusion = confusion_matrix(y_test, y_pred)\n",
+    "print(df_confusion)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-24-711bb13a8429>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[0mFN\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdf_confusion\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msum\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0maxis\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdiag\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdf_confusion\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[0mTP\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdiag\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdf_confusion\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 4\u001B[1;33m \u001B[0mTN\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mdf_confusion\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msum\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m-\u001B[0m \u001B[1;33m(\u001B[0m\u001B[0mFP\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mFN\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mTP\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      5\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mFP\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      6\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mFN\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'numpy.ndarray' object has no attribute 'values'"
+     ]
+    }
+   ],
+   "source": [
+    "FP = df_confusion.sum(axis=0) - np.diag(df_confusion)\n",
+    "FN = df_confusion.sum(axis=1) - np.diag(df_confusion)\n",
+    "TP = np.diag(df_confusion)\n",
+    "TN = df_confusion.values.sum() - (FP + FN + TP)\n",
+    "print(FP)\n",
+    "print(FN)\n",
+    "print(TP)\n",
+    "print(TN)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'function' object has no attribute 'sum'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-21-11c367f4ae1a>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mFP\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mconfusion_matrix\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msum\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0maxis\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdiag\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mconfusion_matrix\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[0mFN\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mconfusion_matrix\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msum\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0maxis\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdiag\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mconfusion_matrix\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[0mTP\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdiag\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mconfusion_matrix\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mTN\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mconfusion_matrix\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msum\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m-\u001B[0m \u001B[1;33m(\u001B[0m\u001B[0mFP\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mFN\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mTP\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"FP: \"\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mFP\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mAttributeError\u001B[0m: 'function' object has no attribute 'sum'"
+     ]
+    }
+   ],
+   "source": [
+    "FP = confusion_matrix.sum(axis=0) - np.diag(confusion_matrix)\n",
+    "FN = confusion_matrix.sum(axis=1) - np.diag(confusion_matrix)\n",
+    "TP = np.diag(confusion_matrix)\n",
+    "TN = confusion_matrix.values.sum() - (FP + FN + TP)\n",
+    "print(\"FP: \" + FP)\n",
+    "print(\"FP: \" + FN)\n",
+    "print(\"FP: \" + TP)\n",
+    "print(\"FP: \" + TN)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Python Coding: Amazon Movies & TV using Naive Bayes"
    ]
