Balancing and Profiling

--- a/Profiling/Profiling.ipynb
+++ b/Profiling/Profiling.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-06T14:00:42.417256Z",
@@ -78,7 +78,7 @@
       "                                          NODE  \\\n",
       "count                                    97177   \n",
       "unique                                   97177   \n",
-      "top     _:znode8HbbjYGtCZ0BnrC7xoKpX6jE1EWuNgz   \n",
+      "top     _:znodeJkI1mGEwlWW7ev1TmJqb67tL3aV8jtM   \n",
       "freq                                         1   \n",
       "\n",
       "                                                      URL REVIEWBODY  \\\n",
@@ -96,7 +96,7 @@
       "                                          NODE  \\\n",
       "count                                    77511   \n",
       "unique                                   77511   \n",
-      "top     _:znode8HbbjYGtCZ0BnrC7xoKpX6jE1EWuNgz   \n",
+      "top     _:znodeTRd2ZQJyb2Vlm1QYP6mlijzoeRCYjR8   \n",
       "freq                                         1   \n",
       "\n",
       "                                                      URL  \\\n",
@@ -108,7 +108,7 @@
       "                                               REVIEWBODY            RATING  \\\n",
       "count                                               77511             77511   \n",
       "unique                                              77511             20845   \n",
-      "top     As far as mocumentary goes this one is very co...  already included   \n",
+      "top     Given that this is a TV movie you might expect...  already included   \n",
       "freq                                                    1             15595   \n",
       "\n",
       "       REVIEWRATING BESTRATING WORSTRATING  \n",
@@ -124,10 +124,10 @@
     },
     {
      "data": {
-      "text/plain": "                                          NODE  \\\ncount                                    76961   \nunique                                   76961   \ntop     _:znode8HbbjYGtCZ0BnrC7xoKpX6jE1EWuNgz   \nfreq                                         1   \n\n                                                      URL  \\\ncount                                               76961   \nunique                                              26610   \ntop     https://www.imdb.com/search/title/?title_type=...   \nfreq                                                  953   \n\n                                               REVIEWBODY            RATING  \\\ncount                                               76961             76961   \nunique                                              76961             20641   \ntop     As far as mocumentary goes this one is very co...  already included   \nfreq                                                    1             15511   \n\n       REVIEWRATING BESTRATING WORSTRATING LANGUAGE  \ncount         76961      76961       76961    76961  \nunique          158         13           8        1  \ntop               3         10           1       en  \nfreq           6107      31291       37014    76961  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>NODE</th>\n      <th>URL</th>\n      <th>REVIEWBODY</th>\n      <th>RATING</th>\n      <th>REVIEWRATING</th>\n      <th>BESTRATING</th>\n      <th>WORSTRATING</th>\n      <th>LANGUAGE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>76961</td>\n      <td>76961</td>\n      <td>76961</td>\n      <td>76961</td>\n      <td>76961</td>\n      <td>76961</td>\n      <td>76961</td>\n      <td>76961</td>\n    </tr>\n    <tr>\n      <th>unique</th>\n      <td>76961</td>\n      <td>26610</td>\n      <td>76961</td>\n      <td>20641</td>\n      <td>158</td>\n      <td>13</td>\n      <td>8</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>top</th>\n      <td>_:znode8HbbjYGtCZ0BnrC7xoKpX6jE1EWuNgz</td>\n      <td>https://www.imdb.com/search/title/?title_type=...</td>\n      <td>As far as mocumentary goes this one is very co...</td>\n      <td>already included</td>\n      <td>3</td>\n      <td>10</td>\n      <td>1</td>\n      <td>en</td>\n    </tr>\n    <tr>\n      <th>freq</th>\n      <td>1</td>\n      <td>953</td>\n      <td>1</td>\n      <td>15511</td>\n      <td>6107</td>\n      <td>31291</td>\n      <td>37014</td>\n      <td>76961</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                          NODE  \\\ncount                                    76958   \nunique                                   76958   \ntop     _:znodeTRd2ZQJyb2Vlm1QYP6mlijzoeRCYjR8   \nfreq                                         1   \n\n                                                      URL  \\\ncount                                               76958   \nunique                                              26612   \ntop     https://www.imdb.com/search/title/?title_type=...   \nfreq                                                  953   \n\n                                               REVIEWBODY            RATING  \\\ncount                                               76958             76958   \nunique                                              76958             20645   \ntop     Given that this is a TV movie you might expect...  already included   \nfreq                                                    1             15511   \n\n       REVIEWRATING BESTRATING WORSTRATING LANGUAGE  \ncount         76958      76958       76958    76958  \nunique          158         13           8        1  \ntop               3         10           1       en  \nfreq           6106      31288       37010    76958  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>NODE</th>\n      <th>URL</th>\n      <th>REVIEWBODY</th>\n      <th>RATING</th>\n      <th>REVIEWRATING</th>\n      <th>BESTRATING</th>\n      <th>WORSTRATING</th>\n      <th>LANGUAGE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>76958</td>\n      <td>76958</td>\n      <td>76958</td>\n      <td>76958</td>\n      <td>76958</td>\n      <td>76958</td>\n      <td>76958</td>\n      <td>76958</td>\n    </tr>\n    <tr>\n      <th>unique</th>\n      <td>76958</td>\n      <td>26612</td>\n      <td>76958</td>\n      <td>20645</td>\n      <td>158</td>\n      <td>13</td>\n      <td>8</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>top</th>\n      <td>_:znodeTRd2ZQJyb2Vlm1QYP6mlijzoeRCYjR8</td>\n      <td>https://www.imdb.com/search/title/?title_type=...</td>\n      <td>Given that this is a TV movie you might expect...</td>\n      <td>already included</td>\n      <td>3</td>\n      <td>10</td>\n      <td>1</td>\n      <td>en</td>\n    </tr>\n    <tr>\n      <th>freq</th>\n      <td>1</td>\n      <td>953</td>\n      <td>1</td>\n      <td>15511</td>\n      <td>6106</td>\n      <td>31288</td>\n      <td>37010</td>\n      <td>76958</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-06T12:23:10.569500Z",
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def adjust_rating(rating, best, worst):\n",
@@ -338,23 +338,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0    0.225573\n",
-      "2.0    0.213543\n",
-      "3.0    0.207258\n",
-      "5.0    0.202199\n",
-      "1.0    0.151427\n",
+      "4.0    0.225572\n",
+      "2.0    0.213608\n",
+      "3.0    0.207149\n",
+      "5.0    0.202223\n",
+      "1.0    0.151449\n",
       "Name: REVIEWRATING_adj, dtype: float64\n",
-      "4.0    16763\n",
-      "2.0    15869\n",
-      "3.0    15402\n",
-      "5.0    15026\n",
-      "1.0    11253\n",
+      "4.0    16762\n",
+      "2.0    15873\n",
+      "3.0    15393\n",
+      "5.0    15027\n",
+      "1.0    11254\n",
       "Name: REVIEWRATING_adj, dtype: int64\n"
      ]
     }
@@ -372,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
-      "text/plain": "       REVIEWRATING_new  BESTRATING_new  WORSTRATING_new  REVIEWRATING_adj\ncount      24293.000000    24293.000000      24293.00000      19550.000000\nmean           7.915078        9.006833          0.77829          4.835090\nstd           15.596449       18.576426          0.41886          0.591529\nmin            0.000000        1.000000          0.00000          1.000000\n25%            5.000000        5.000000          1.00000          5.000000\n50%            5.000000        5.000000          1.00000          5.000000\n75%            5.000000        5.000000          1.00000          5.000000\nmax          100.000000      100.000000          6.00000          5.000000",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>REVIEWRATING_new</th>\n      <th>BESTRATING_new</th>\n      <th>WORSTRATING_new</th>\n      <th>REVIEWRATING_adj</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>24293.000000</td>\n      <td>24293.000000</td>\n      <td>24293.00000</td>\n      <td>19550.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>7.915078</td>\n      <td>9.006833</td>\n      <td>0.77829</td>\n      <td>4.835090</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>15.596449</td>\n      <td>18.576426</td>\n      <td>0.41886</td>\n      <td>0.591529</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>1.000000</td>\n      <td>0.00000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>5.000000</td>\n      <td>5.000000</td>\n      <td>1.00000</td>\n      <td>5.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>5.000000</td>\n      <td>5.000000</td>\n      <td>1.00000</td>\n      <td>5.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>5.000000</td>\n      <td>5.000000</td>\n      <td>1.00000</td>\n      <td>5.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>100.000000</td>\n      <td>100.000000</td>\n      <td>6.00000</td>\n      <td>5.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "       REVIEWRATING_new  BESTRATING_new  WORSTRATING_new  REVIEWRATING_adj\ncount      76958.000000    76958.000000     76958.000000      74309.000000\nmean          13.853401       27.700499         0.480912          3.113512\nstd           19.735800       37.811015         0.499639          1.356837\nmin            0.000000        4.000000         0.000000          1.000000\n25%            3.000000        5.000000         0.000000          2.000000\n50%            5.000000       10.000000         0.000000          3.000000\n75%           10.000000       10.000000         1.000000          4.000000\nmax          100.000000      100.000000         1.000000          5.000000",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>REVIEWRATING_new</th>\n      <th>BESTRATING_new</th>\n      <th>WORSTRATING_new</th>\n      <th>REVIEWRATING_adj</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>76958.000000</td>\n      <td>76958.000000</td>\n      <td>76958.000000</td>\n      <td>74309.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>13.853401</td>\n      <td>27.700499</td>\n      <td>0.480912</td>\n      <td>3.113512</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>19.735800</td>\n      <td>37.811015</td>\n      <td>0.499639</td>\n      <td>1.356837</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>0.000000</td>\n      <td>4.000000</td>\n      <td>0.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>3.000000</td>\n      <td>5.000000</td>\n      <td>0.000000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>5.000000</td>\n      <td>10.000000</td>\n      <td>0.000000</td>\n      <td>3.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>10.000000</td>\n      <td>10.000000</td>\n      <td>1.000000</td>\n      <td>4.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>100.000000</td>\n      <td>100.000000</td>\n      <td>1.000000</td>\n      <td>5.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "df.to_csv('../Data/movie_reviews.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# finding out where the reviews come from (domain specific)\n",
