--- a/BaselineExperiments/Baseline_Experiment_Type_1-NaiveBayes.ipynb
+++ b/BaselineExperiments/Baseline_Experiment_Type_1-NaiveBayes.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T08:25:36.695261Z",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T09:05:46.612989Z",
@@ -145,27 +145,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1697533\n",
-      "1697533\n"
+      "194439\n"
      ]
     }
    ],
    "source": [
     "data = []\n",
-    "with gzip.open('reviews_Movies_and_TV_5.json.gz') as f:\n",
+    "with gzip.open('../Data/reviews_Cell_Phones_and_Accessories_5.json.gz') as f:\n",
     "    for l in f: \n",
     "        data.append(json.loads(l.strip()))\n",
     "\n",
     "# total length of list, this number equals total number of movie/tv reviews\n",
-    "print(len(data))\n",
-    "\n",
-    "# first row of the list\n",
     "print(len(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-18T09:03:02.883397Z",
@@ -174,17 +170,19 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1697533\n"
-     ]
+     "data": {
+      "text/plain": "       reviewerID        asin      reviewerName helpful  \\\n0  A30TL5EWN6DFXT  120401325X         christina  [0, 0]   \n1   ASY55RVNIL0UD  120401325X          emily l.  [0, 0]   \n2  A2TMXE2AFO7ONB  120401325X             Erica  [0, 0]   \n3   AWJ0WZQYMYFQ4  120401325X                JM  [4, 4]   \n4   ATX7CZYFXI1KW  120401325X  patrice m rogoza  [2, 3]   \n\n                                          reviewText  overall  \\\n0  They look good and stick good! I just don't li...      4.0   \n1  These stickers work like the review says they ...      5.0   \n2  These are awesome and make my phone look so st...      5.0   \n3  Item arrived in great time and was in perfect ...      4.0   \n4  awesome! stays on, and looks great. can be use...      5.0   \n\n                                     summary  unixReviewTime   reviewTime  \n0                                 Looks Good      1400630400  05 21, 2014  \n1                      Really great product.      1389657600  01 14, 2014  \n2                             LOVE LOVE LOVE      1403740800  06 26, 2014  \n3                                      Cute!      1382313600  10 21, 2013  \n4  leopard home button sticker for iphone 4s      1359849600   02 3, 2013  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>reviewerID</th>\n      <th>asin</th>\n      <th>reviewerName</th>\n      <th>helpful</th>\n      <th>reviewText</th>\n      <th>overall</th>\n      <th>summary</th>\n      <th>unixReviewTime</th>\n      <th>reviewTime</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A30TL5EWN6DFXT</td>\n      <td>120401325X</td>\n      <td>christina</td>\n      <td>[0, 0]</td>\n      <td>They look good and stick good! I just don't li...</td>\n      <td>4.0</td>\n      <td>Looks Good</td>\n      <td>1400630400</td>\n      <td>05 21, 2014</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ASY55RVNIL0UD</td>\n      <td>120401325X</td>\n      <td>emily l.</td>\n      <td>[0, 0]</td>\n      <td>These stickers work like the review says they ...</td>\n      <td>5.0</td>\n      <td>Really great product.</td>\n      <td>1389657600</td>\n      <td>01 14, 2014</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>A2TMXE2AFO7ONB</td>\n      <td>120401325X</td>\n      <td>Erica</td>\n      <td>[0, 0]</td>\n      <td>These are awesome and make my phone look so st...</td>\n      <td>5.0</td>\n      <td>LOVE LOVE LOVE</td>\n      <td>1403740800</td>\n      <td>06 26, 2014</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>AWJ0WZQYMYFQ4</td>\n      <td>120401325X</td>\n      <td>JM</td>\n      <td>[4, 4]</td>\n      <td>Item arrived in great time and was in perfect ...</td>\n      <td>4.0</td>\n      <td>Cute!</td>\n      <td>1382313600</td>\n      <td>10 21, 2013</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ATX7CZYFXI1KW</td>\n      <td>120401325X</td>\n      <td>patrice m rogoza</td>\n      <td>[2, 3]</td>\n      <td>awesome! stays on, and looks great. can be use...</td>\n      <td>5.0</td>\n      <td>leopard home button sticker for iphone 4s</td>\n      <td>1359849600</td>\n      <td>02 3, 2013</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "## convert list into pandas dataframe\n",
     "df = pd.DataFrame.from_dict(data)\n",
-    "print(len(df))"
+    "df.head()"
    ]
   },
   {
